Fix incorrect label spacing

--- a/app/assets/stylesheets/transformation/components/_search_form.scss
+++ b/app/assets/stylesheets/transformation/components/_search_form.scss
@@ -1,7 +1,11 @@
 .search-form {
   background-color: $grey-special;
   max-width: none;
-  padding: $spacing-3 $spacing-3 0 $spacing-3;
+  padding: $spacing-3;
+
+  label {
+    margin-bottom: 0;
+  }
 
   input {
     height: 54px;
